--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ldccr
-Title: Corpus Parser for Japanese
-Version: 0.0.2
+Title: Japanese Corpus Parser for R
+Version: 0.0.3
 Authors@R: c(
     person("Kato", "Akiru", email = "paithiov909@gmail.com", role = c("aut", "cre")))
 Maintainer: Kato Akiru <paithiov909@gmail.com>
@@ -12,8 +12,7 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-Depends: 
-    R (>= 2.10)
+Depends: R (>= 2.10)
 Imports: 
     utils,
     purrr,
