--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,11 @@
 export(aozora)
 export(ldcc_categories)
 export(parse_ldcc)
+import(memoise)
 import(purrr)
-import(readr)
 import(stringr)
 import(utils)
 importFrom(readr,write_lines)
 importFrom(utils,download.file)
 importFrom(utils,unzip)
+importFrom(vroom,vroom_lines)
