--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,25 +1,29 @@
 Package: ldccr
-Title: Japanese Corpus Parser for R
-Version: 0.0.6
+Title: Various Japanese Corpus Parser
+Version: 0.0.6.900
 Authors@R: c(
     person("Akiru", "Kato", email = "paithiov909@gmail.com", role = c("aut", "cre")))
 Maintainer: Kato Akiru <paithiov909@gmail.com>
-Description: Download the Livedoor News Corpus, parse it to data.frame and more.
+Description: Various Japanese corpus parser for R.
 License: MIT + file LICENSE
 URL: https://github.com/paithiov909/ldccr
 BugReports: https://github.com/paithiov909/ldccr/issues
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 Depends: R (>= 2.10)
 Imports: 
     utils,
+    dplyr,
     memoise,
     purrr,
+    RcppSimdJson,
     readr,
+    rlang,
+    stringi,
     stringr,
-    vroom
+    tibble
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
