docs: update readme

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,12 @@
 Package: ldccr
-Title: Various Japanese Corpus Parser
+Title: Utilities for Various Japanese Corpora
 Version: 0.0.6.900
 Authors@R: c(
     person("Akiru", "Kato", email = "paithiov909@gmail.com", role = c("aut", "cre")))
 Maintainer: Kato Akiru <paithiov909@gmail.com>
-Description: Various Japanese corpus parser for R.
+Description: The goal of ldccr package is to make easy to use Japanese language resources.
+    This package provides parsers for several Japanese corpora that are free or open licensed
+    and a downloader of zipped text files published on Aozora Bunko.
 License: MIT + file LICENSE
 URL: https://github.com/paithiov909/ldccr
 BugReports: https://github.com/paithiov909/ldccr/issues
