--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,18 +5,7 @@ export(jrte_rte_files)
 export(read_aozora)
 export(read_jrte_rte)
 export(read_ldnws)
-importFrom(RcppSimdJson,fparse)
-importFrom(dplyr,"%>%")
-importFrom(memoise,memoise)
-importFrom(purrr,map)
-importFrom(purrr,map_dfr)
-importFrom(purrr,set_names)
-importFrom(purrr,walk)
-importFrom(readr,read_lines)
-importFrom(readr,read_tsv)
-importFrom(readr,write_lines)
-importFrom(tibble,as_tibble)
-importFrom(tibble,rowid_to_column)
+import(dplyr)
 importFrom(utils,download.file)
 importFrom(utils,untar)
 importFrom(utils,unzip)
