--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,22 +1,19 @@
 Package: ldccr
 Title: Utilities for Various Japanese Corpora
-Version: 0.0.6.900
-Authors@R: c(
-    person("Akiru", "Kato", email = "paithiov909@gmail.com", role = c("aut", "cre")))
+Version: 0.0.7
+Authors@R: 
+    person("Akiru", "Kato", , "paithiov909@gmail.com", role = c("aut", "cre"))
 Maintainer: Akiru Kato <paithiov909@gmail.com>
-Description: The goal of ldccr package is to make easy to use Japanese language resources.
-    This package provides parsers for several Japanese corpora that are free or open licensed
-    and a downloader of zipped text files published on Aozora Bunko.
+Description: The goal of ldccr package is to make easy to use Japanese
+    language resources. This package provides parsers for several
+    Japanese corpora that are free or open licensed and a downloader of
+    zipped text files published on Aozora Bunko.
 License: MIT + file LICENSE
 URL: https://github.com/paithiov909/ldccr
 BugReports: https://github.com/paithiov909/ldccr/issues
-Encoding: UTF-8
-LazyData: true
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
-Depends: R (>= 2.10)
+Depends: 
+    R (>= 2.10)
 Imports: 
-    utils,
     dplyr,
     memoise,
     purrr,
@@ -25,7 +22,12 @@ Imports:
     rlang,
     stringi,
     stringr,
-    tibble
+    tibble,
+    utils
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Encoding: UTF-8
+LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.1.2
