--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(jrte_rte_files)
 export(ldnws_categories)
 export(parse_jrte_reasoning)
 export(read_aozora)
+export(read_ja_text8)
 export(read_jrte)
 export(read_ldnws)
 import(dplyr)
