--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ldccr
 Title: Utilities for Various Japanese Corpora
-Version: 0.0.11.20221212
+Version: 0.1.0.20221223
 Authors@R: 
     person("Akiru", "Kato", , "paithiov909@gmail.com", role = c("aut", "cre"))
 Maintainer: Akiru Kato <paithiov909@gmail.com>
@@ -16,7 +16,7 @@ Depends:
 Imports: 
     dplyr,
     memoise,
-    purrr,
+    purrr (>= 1.0.0),
     RcppSimdJson,
     readr,
     rlang,
@@ -30,4 +30,4 @@ Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.2
+RoxygenNote: 7.2.3
