feat: add 'read_srt'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(read_aozora)
 export(read_ja_text8)
 export(read_jrte)
 export(read_ldnws)
+export(read_srt)
 export(unidic_availables)
 import(dplyr)
 import(rlang)
@@ -15,3 +16,4 @@ importFrom(utils,download.file)
 importFrom(utils,globalVariables)
 importFrom(utils,untar)
 importFrom(utils,unzip)
+useDynLib(ldccr, .registration = TRUE)
