--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,10 @@
 Package: ldccr
 Title: Utilities for Various Japanese Corpora
-Version: 0.1.0.20230706
-Authors@R: 
-    person("Akiru", "Kato", , "paithiov909@gmail.com", role = c("aut", "cre"))
+Version: 0.2.0.20230922
+Authors@R:c(
+    person("Akiru", "Kato", , "paithiov909@gmail.com", role = c("aut", "cre")),
+    person("Saurabh", "Shrivastava", role = "ctb")
+  )
 Maintainer: Akiru Kato <paithiov909@gmail.com>
 Description: The goal of ldccr package is to make easy to use Japanese
     language resources. This package provides parsers for several Japanese
@@ -11,9 +13,9 @@ Description: The goal of ldccr package is to make easy to use Japanese
 License: MIT + file LICENSE
 URL: https://github.com/paithiov909/ldccr
 BugReports: https://github.com/paithiov909/ldccr/issues
-Depends: 
+Depends:
     R (>= 2.10)
-Imports: 
+Imports:
     dplyr,
     memoise,
     purrr (>= 1.0.0),
@@ -24,8 +26,10 @@ Imports:
     tibble,
     utils,
     yesno
-Suggests: 
+Suggests:
     testthat (>= 3.0.0)
+LinkingTo:
+    Rcpp
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
