--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,8 @@
 Package: ldccr
 Title: Utilities for Various Japanese Corpora
-Version: 2024.02.04
-Authors@R: c(
-    person("Akiru", "Kato", , "paithiov909@gmail.com", role = c("aut", "cre")),
-    person("Saurabh", "Shrivastava", role = "ctb")
-  )
+Version: 2024.04.24
+Authors@R: 
+    person("Akiru", "Kato", , "paithiov909@gmail.com", role = c("aut", "cre"))
 Maintainer: Akiru Kato <paithiov909@gmail.com>
 Description: The goal of ldccr package is to make easy to use Japanese
     language resources. This package provides parsers for several Japanese
@@ -28,10 +26,9 @@ Imports:
     yesno
 Suggests:
     testthat (>= 3.0.0)
-LinkingTo:
-    Rcpp
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
+LazyDataCompression: xz
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
