--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,10 +12,15 @@ export(read_aozora)
 export(read_ja_text8)
 export(read_jrte)
 export(read_ldnws)
+export(sqids)
 export(unidic_availables)
+export(unsqids)
 import(dplyr)
-import(rlang)
+importFrom(Rcpp,sourceCpp)
+importFrom(rlang,.data)
+importFrom(rlang,.env)
 importFrom(utils,download.file)
 importFrom(utils,globalVariables)
 importFrom(utils,untar)
 importFrom(utils,unzip)
+useDynLib(ldccr, .registration = TRUE)
