docs: polish docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(unidic_availables)
 export(unsqids)
 import(dplyr)
 importFrom(Rcpp,sourceCpp)
+importFrom(lifecycle,deprecate_warn)
 importFrom(rlang,.data)
 importFrom(rlang,.env)
 importFrom(utils,download.file)
