--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Description: The goal of ldccr package is to make easy to use Japanese
     corpora that are free or open licensed and a downloader of zipped text
     files published on Aozora Bunko.
 License: MIT + file LICENSE
-URL: https://github.com/paithiov909/ldccr
+URL: https://github.com/paithiov909/ldccr, https://paithiov909.github.io/ldccr/
 BugReports: https://github.com/paithiov909/ldccr/issues
 Depends:
     R (>= 3.5)
